--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,7 @@
 	<script type="text/javascript" src="js/venders/jquery.sticky.js"></script>
 	<script type="text/javascript" src="owlcarousel/owl.carousel.min.js"></script>	
 	<script type="text/javascript" src="js/venders/jquery-ui.js"></script>
-	<script type="text/javascript" > 
-    	$(window).load(function(){     		 
-    		$("input[name^='user-phone']").mask("+7 (999) 999-9999");
-    	}); 
-    </script>
 
-	
 	<link rel="stylesheet" href="css/venders/jquery.arcticmodal-0.3.css">	
 	<script type="text/javascript" src="js/venders/jquery.arcticmodal-0.3.min.js"></script>
 	<!--[if lte IE 9]>
@@ -419,18 +413,18 @@
 			<form action="" method="post" class="form">
 				<div class="input-wrapper">
 					<label>Введите ваше имя:</label>
-					<input type="text" class="user-input input-form-1 required" name="user-name">					
+					<input type="text" class="user-input input-form-1 required" name="user-name" placeholder="Иван">					
 				</div>
 				<div class="input-wrapper">
 					<label>Введите ваш телефон:</label>
-					<input type="text" class="user-input input-form-1 required" name="user-phone">					
+					<input type="text" class="user-input input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
 				</div>
 				<div class="input-wrapper">
 					<button class="button button-white arrow-red-right">Получить подбор</button>					
 				</div>
 				<div class="ch_wrapper">
 				<!-- можно поменять на type="radio" -->
-					<input id="check1" type="checkbox" name="check" value="1">
+					<input id="check1" type="checkbox" name="check" value="1"  checked>
 					<label for="check1">Я согласен <a href="#">с условиями</a> обработки персональных данных</label>
 				</div>
 				
@@ -453,7 +447,7 @@
 				</div>	
 
 				<!-- ***************** -->
-				<div class="disclaimer__list-item block-shadow">
+				<div class="disclaimer__list-item block-shadow js-list-item">
 					<p class="disclaimer__list-item-title">Дисклеймер ежемесячных платежей</p>
 				</div>
 				<div class="disclaimer__list-item-hidden">
@@ -464,7 +458,7 @@
 				</div>
 
 				<!-- ***************** -->
-				<div class="disclaimer__list-item block-shadow">
+				<div class="disclaimer__list-item block-shadow js-list-item">
 					<p class="disclaimer__list-item-title">Дисклеймер ежемесячных платежей</p>
 				</div>
 				<div class="disclaimer__list-item-hidden">
@@ -498,18 +492,18 @@
 			<form action="" method="post" class="form">
 				<div class="input-wrapper">
 					<label>Введите ваше имя:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name">					
+					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name" placeholder="Иван">					
 				</div>
 				<div class="input-wrapper">
 					<label>Введите ваш телефон:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone">					
+					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
 				</div>
 				<div class="input-wrapper">
 					<button class="button arrow-right">Получить подбор</button>					
 				</div>
 				<div class="ch_wrapper">
 				<!-- можно поменять на type="radio" -->
-					<input id="check2" type="checkbox" name="check" value="1">
+					<input id="check2" type="checkbox" name="check" value="1" checked>
 					<label for="check2">Я согласен <a href="#"><b>с условиями</b></a> обработки персональных данных</label>
 				</div>
 				
@@ -526,18 +520,18 @@
 			<form action="" method="post" class="form special__block-right">
 				<div class="input-wrapper">
 					<label>Введите ваше имя:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name">					
+					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name" placeholder="Иван">					
 				</div>
 				<div class="input-wrapper">
 					<label>Введите ваш телефон:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone">					
+					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
 				</div>
 				<div class="input-wrapper">
 					<button class="button search">Подобрать авто</button>					
 				</div>
 				<div class="ch_wrapper">
 				<!-- можно поменять на type="radio" -->
-					<input id="check3" type="checkbox" name="check" value="1">
+					<input id="check3" type="checkbox" name="check" value="1" checked>
 					<label for="check3">Я согласен <a href="#"><b>с условиями</b></a> обработки персональных данных</label>
 				</div>				
 			</form>
@@ -669,18 +663,18 @@
 	    <form action="" method="post" class="form modal__form">
 				<div class="input-wrapper">
 					<label>Введите ваше имя:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name">					
+					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name" placeholder="Иван">					
 				</div>
 				<div class="input-wrapper">
 					<label>Введите ваш телефон:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone">					
+					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
 				</div>
 				<div class="input-wrapper">
 					<button class="button">Отправить</button>					
 				</div>
 				<div class="ch_wrapper">
 				<!-- можно поменять на type="radio" -->
-					<input id="check3" type="checkbox" name="check" value="1">
+					<input id="check3" type="checkbox" name="check" value="1" checked>
 					<label for="check3">Я согласен <a href="#"><b>с условиями</b></a> обработки персональных данных</label>
 				</div>
 				<input type="text" class="hidden" value="Хочу купить">				
