--- a/app/index.html
+++ b/app/index.html
@@ -51,10 +51,10 @@
 	<div class="main-header-bg">
 		<div class="sticky-wrapper" id="header-sticky-wrapper">
 			<div class="main-header container">
-				<a href="" class="main-header__logo"></a>
+				<a href="" class="main-header__logo"><span>Ауди</span> <br> Центр Саратов</a>
 				<p class="main-header__text">				
-					Усть-Курдюмское шоссе, 4 км, строение 2
-					<a href="#" class="link js-btn-modal">Обратный звонок</a>
+					Усть-Курдюмское шоссе, 4 км, стр. 2
+					<a href="#" class="link js-btn-modal">Обратный звонок&nbsp; </a><span class="span">››</span>
 				</p>
 				<p class="main-header__audi"><img src="img/audi-logo.png" alt=""></p>	
 				<div class="main-header__phone">				
@@ -545,10 +545,10 @@
 	
 	<footer class="main-footer-bg">
 		<div class="main-footer container">
-			<a href="#" class="main-footer__logo"></a>
+			<a href="#" class="main-footer__logo"><span>Ауди</span> <br> Центр Саратов</a>
 			<p class="main-footer__text">				
 					Усть-Курдюмское шоссе, 4 км, строение 2
-					<a href="#" class="link js-btn-modal">Обратный звонок</a>
+					<a href="#" class="link js-btn-modal">Обратный звонок&nbsp; </a><span class="span">››</span>
 				</p>
 				<p class="main-footer__audi"><img src="img/audi-logo.png" alt=""></p>	
 				<div class="main-footer__phone">				
