адаптив стр.успешно

--- a/app/successfully.html
+++ b/app/successfully.html
@@ -53,7 +53,7 @@
 			<div class="main-header container">
 				<a href="" class="main-header__logo"><span>Ауди</span> <br> Центр Саратов</a>
 				<p class="main-header__text">				
-					Усть-Курдюмское шоссе, 4 км, стр. 2
+					Усть-Курдюмское шоссе, 4 км, стр. 2 <br>
 					<a href="#" class="link js-btn-modal">Обратный звонок&nbsp; </a><span class="span">››</span>
 				</p>
 				<p class="main-header__audi"><img src="img/audi-logo.png" alt=""></p>	
@@ -84,7 +84,7 @@
 		<div class="main-footer container">
 			<a href="#" class="main-footer__logo"><span>Ауди</span> <br> Центр Саратов</a>
 			<p class="main-footer__text">				
-					Усть-Курдюмское шоссе, 4 км, строение 2
+					Усть-Курдюмское шоссе, 4 км, строение 2 <br>
 					<a href="#" class="link js-btn-modal">Обратный звонок&nbsp; </a><span class="span">››</span>
 				</p>
 				<p class="main-footer__audi"><img src="img/audi-logo.png" alt=""></p>	
@@ -94,141 +94,9 @@
 				</div>				
 		</div>
 	</footer>
-
-	
-	
 	
 
-<!-- ************** БЛОК МОДАЛЬНЫЕ ОКНА ******************- -->
-	<div class="modal_wrapper">  </div>
-	<div class="modal js-modal-description">	  
-	    <button class="modal_close" type="button">Закрыть</button>
-	    <div class="modal__head">	    	
-	    	<h3>Audi A3 Sedan</h3>
-	    	<p class="price">Цена: <b>968 000 руб.</b></p>
-	    	<hr>
-	    </div>    
 
-	    <div class="modal__left" style="width: 550px;">
-	    	<div id="owl-slider" class="owl-carousel">
-	    		<div class="img-wrapper"><img src="img/auto1.png" alt=""></div>
-	    		<div class="img-wrapper"><img src="img/auto2.png" alt=""></div>
-	    		<div class="img-wrapper"><img src="img/auto3.png" alt=""></div>
-	    		<div class="img-wrapper"><img src="img/auto2.png" alt=""></div>
-	    	</div>	    	
-	   
-
-	    	<div id="owl-carousel" class="owl-carousel" style="margin-top: 20px;">
-	    		<div class="img-wrapper"><img src="img/auto1.png" alt=""></div>
-	    		<div class="img-wrapper"><img src="img/auto2.png" alt=""></div>
-	    		<div class="img-wrapper"><img src="img/auto3.png" alt=""></div>
-	    		<div class="img-wrapper"><img src="img/auto2.png" alt=""></div>
-	    	</div>	    	
-	    </div>
-
-	    <div class="modal__right" style="width: 480px;">
-	    	<table class="table table--modal1">
-				<tr>
-					<td>Год выпуска</td>
-					<td><b>2016</b></td>
-				</tr>
-				<tr>
-					<td>Пробег</td>
-					<td><b>80 000 км</b></td>
-				</tr>
-				<tr>
-					<td>Кузов</td>
-					<td>4 дв</td>
-				</tr>
-				<tr>
-					<td>Двигатель</td>
-					<td>1.4 л. / 125 л.с. / Бензин турбонаддув</td>
-				</tr>
-				<tr>
-					<td>Коробка</td>
-					<td>АКПП</td>
-				</tr>
-				<tr>
-					<td>Привод</td>
-					<td>Передний привод</td>
-				</tr>
-				<tr>
-					<td>Цвет</td>
-					<td><i class="auto-color white"></i>Белый</td>
-				</tr>				
-				<tr>
-					<td>Руль</td>
-					<td>Левый</td>
-				</tr>
-				<tr>
-					<td>Состояние</td>
-					<td>Не битый</td>
-				</tr>
-				<tr>
-					<td>Владельцы</td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td>ПТС</td>
-					<td>Оригинал</td>
-				</tr>
-				<tr>
-					<td>VIN</td>
-					<td>WAUZZZ8P*CA****63</td>
-				</tr>
-			</table>
-	    </div>
-
-	    <div class="modal__left" style="width: 550px;">
-	    	<h4 class="">Желаете преобрести<br>автомобиль? Остались вопросы? </h4>
-	    	<p class="text">Свяжитесь с нами любым удобным способом!</p>
-	    	<a href="#" class="link gray js-btn-modal-2">Заказать звонок</a>
-	    </div>
-	    
-
-	    <div class="modal__right" style="width: 480px;">
-	    	<button class="button arrow-right js-btn-modal-2">Хочу купить</button>
-	    	<a href="#" class="link js-btn-modal-2">Записаться на тест драйв</a>
-	    </div>
-	  </div>
-	</div>
-
-
-	<div class="modal js-modal" style="position: fixed;">	  
-	    <button class="modal_close" type="button">Закрыть</button>
-	    <p class="modal__title">Хочу купить</p>
-	    <form action="" method="post" class="form modal__form">
-				<div class="input-wrapper">
-					<label>Введите ваше имя:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-name" placeholder="Иван">					
-				</div>
-				<div class="input-wrapper">
-					<label>Введите ваш телефон:</label>
-					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
-				</div>
-				<div class="input-wrapper">
-					<button class="button">Отправить</button>					
-				</div>
-				<div class="ch_wrapper">
-				<!-- можно поменять на type="radio" -->
-					<input id="check3" type="checkbox" name="check" value="1" checked>
-					<label for="check3">Я согласен <a href="#"><b>с условиями</b></a> обработки персональных данных</label>
-				</div>
-				<input type="text" class="hidden" value="Хочу купить">				
-			</form>
-	</div>
-
-
-	<div style="display: none;">
-	    <div class="box-modal" id="exampleModal">
-	      <div class="">        
-	        <div class="box-modal_close arcticmodal-close">x</div>
-	        <h3>Спасибо за заявку!</h3>
-	        <hr>
-	        <p>Мы свяжемся с Вами в ближайшее время.</p>
-	      </div>
-	    </div>
-	</div>
 
 <!-- ********************************- -->
 </div> <!-- end wrapper-x -->
