--- a/app/index.html
+++ b/app/index.html
@@ -424,8 +424,8 @@
 				<div class="input-wrapper">
 					<label>Введите ваш телефон:</label>
 					<input type="text" class="user-input input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
-				</div> <br>
-				<div class="input-wrapper">
+				</div> 
+				<div class="input-wrapper mobil-block">
 					<button class="button button-white arrow-red-right">Получить подбор</button>					
 				</div>
 				<div class="ch_wrapper">
@@ -504,7 +504,7 @@
 					<label>Введите ваш телефон:</label>
 					<input type="text" class="user-input in-shadow input-form-1 required" name="user-phone" placeholder="+375 (33) 123-45-67">					
 				</div>
-				<div class="input-wrapper">
+				<div class="input-wrapper mobil-block">
 					<button class="button arrow-right">Получить подбор</button>					
 				</div>
 				<div class="ch_wrapper">
